--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <meta charset="UTF-8">
   <link rel="icon" type="image/svg+xml" href="/vite.svg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Portfolio of Eldissone Vilonga - Full Stack Developer and Founder at finev">
+  <meta name="keywords" content="web development, JavaScript, React, Node.js, portfolio, Angola developer">
+  <meta name="author" content="Eldissone Vilonga">
+  <meta property="og:title" content="Eldissone Vilonga Portfolio">
+  <meta property="og:description" content="Full Stack Developer and Founder">
+  <meta property="og:image" content="./src/assets/img/ev.png">
+  <meta property="og:url" content="https://yourdomain.com">
+  <meta name="twitter:card" content="summary_large_image">
   <title>portifolio.ev</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -89,12 +97,19 @@
         <div class="social-links">
           <p>Connect with me:</p>
           <ul>
-            <li><a href="https://www.linkedin.com/in/eldissone-vilonga-210207239"  target="_blank" rel="noopener noreferrer" class="social-link" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a></li>
-            <li><a href="https://github.com/Eldissone"  target="_blank" rel="noopener noreferrer" class="social-link" aria-label="GitHub"><i class="fab fa-github"></i></a></li>
-            <li><a href="https://discord.com/users/1052145528873431090"  target="_blank" rel="noopener noreferrer" class="social-link" aria-label="Discord"><i class="fab fa-discord"></i></a></li>
-            <li><a href="https://www.instagram.com/eldissone/"  target="_blank" rel="noopener noreferrer" class="social-link" aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="https://www.facebook.com/heicy.mallike/"  target="_blank" rel="noopener noreferrer" class="social-link" aria-label="Facebook"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="https://wa.me/244933170799"  target="_blank" rel="noopener noreferrer" class="social-link" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/eldissone-vilonga-210207239" target="_blank"
+                rel="noopener noreferrer" class="social-link" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            </li>
+            <li><a href="https://github.com/Eldissone" target="_blank" rel="noopener noreferrer" class="social-link"
+                aria-label="GitHub"><i class="fab fa-github"></i></a></li>
+            <li><a href="https://discord.com/users/1052145528873431090" target="_blank" rel="noopener noreferrer"
+                class="social-link" aria-label="Discord"><i class="fab fa-discord"></i></a></li>
+            <li><a href="https://www.instagram.com/eldissone/" target="_blank" rel="noopener noreferrer"
+                class="social-link" aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://www.facebook.com/heicy.mallike/" target="_blank" rel="noopener noreferrer"
+                class="social-link" aria-label="Facebook"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://wa.me/244933170799" target="_blank" rel="noopener noreferrer" class="social-link"
+                aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a></li>
             <li><a href="#contact" class="social-link" aria-label="Email"><i class="fas fa-envelope"></i></a></li>
           </ul>
         </div>
@@ -174,7 +189,7 @@
               <img src="./src/assets/img/nexus1.png" alt="">
               <div class="project-overlay">
                 <h3>NEXUS ANALYTICS</h3>
-                <p>Nexus is an intelligent platform that analyzes personal or company/brand profiles on social media and proposes engagement and content creation strategies.</p>
+                <p>Nexus is an intelligent platform that analyzes personal or company/brand profiles on social media.</p>
                 <a href="#" class="project-link">View Details <i class="fas fa-arrow-right"></i></a>
               </div>
             </div>
@@ -199,7 +214,8 @@
               <div class="project-overlay">
                 <h3>Unione group Site</h3>
                 <p>Institutional website of the Unione group, which comprises more than twelve companies.</p>
-                <a href="https://unioneafrica.com/" class="project-link">View Details <i class="fas fa-arrow-right"></i></a>
+                <a href="https://unioneafrica.com/" class="project-link">View Details <i
+                    class="fas fa-arrow-right"></i></a>
               </div>
             </div>
             <div class="project-info">
@@ -255,7 +271,7 @@
             </div>
           </div>
 
-          <form class="contact-form" action="#">
+          <form class="contact-form"  id="contactForm" action="#">
             <div class="form-group">
               <input type="text" name="name" placeholder="Your Name" required>
             </div>
@@ -284,12 +300,18 @@
           <div class="footer-social">
             <p>Follow me on social media:</p>
             <ul>
-              <li><a href="www.linkedin.com/in/eldissone-vilonga-210207239"  target="_blank" rel="noopener noreferrer" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a></li>
-              <li><a href="https://github.com/Eldissone"  target="_blank" rel="noopener noreferrer" aria-label="GitHub"><i class="fab fa-github"></i></a></li>
-              <li><a href="https://discord.com/users/1052145528873431090"  target="_blank" rel="noopener noreferrer" aria-label="Discord"><i class="fab fa-discord"></i></a></li>
-              <li><a href="https://www.instagram.com/eldissone/"  target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
-              <li><a href="https://www.facebook.com/heicy.mallike/"  target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook"></i></a></li>
-              <li><a href="https://wa.me/244933170799"  target="_blank" rel="noopener noreferrer" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/eldissone-vilonga-210207239" target="_blank"
+                  rel="noopener noreferrer" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a></li>
+              <li><a href="https://github.com/Eldissone" target="_blank" rel="noopener noreferrer"
+                  aria-label="GitHub"><i class="fab fa-github"></i></a></li>
+              <li><a href="https://discord.com/users/1052145528873431090" target="_blank" rel="noopener noreferrer"
+                  aria-label="Discord"><i class="fab fa-discord"></i></a></li>
+              <li><a href="https://www.instagram.com/eldissone/" target="_blank" rel="noopener noreferrer"
+                  aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
+              <li><a href="https://www.facebook.com/heicy.mallike/" target="_blank" rel="noopener noreferrer"
+                  aria-label="Facebook"><i class="fab fa-facebook"></i></a></li>
+              <li><a href="https://wa.me/244933170799" target="_blank" rel="noopener noreferrer"
+                  aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a></li>
               <li><a href="#contact" aria-label="Email"><i class="fas fa-envelope"></i></a></li>
             </ul>
           </div>
